--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,28 @@ body{
     background-color: black;
 }
 
+.div{
+    padding: 20px;
+    position: relative;
+    display: block;
+}
+
 .div-photo {
+    z-index: 10;
+    position: relative;
+    display: block;
+}
+
+.photo {
     max-width: 300px;
 }
+
+.div-info{
+    z-index: 10;
+}
+
+.pool {
+    background: rgb(45,44,47);
+}
+
+
