--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,25 +2,57 @@ body{
     background-color: black;
 }
 
+.pool {
+    background: rgb(45,44,47);
+}
+
 .div{
-    padding: 20px;
+    width: 100%;
+}
+
+.image{
     position: relative;
+    width: 20vw;
+    height: 50vh;
+}
+
+.image-body {
     display: block;
+    width: 100%;
+    height: 100%;
 }
 
-.div-photo {
-    z-index: 10;
-    position: relative;
-    display: block;
+.image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0,0,0,0.6);
+    color: white;
+    opacity: 0;
+    transition: opacity 0.25s;
 }
 
-.photo {
-    max-width: 300px;
+.image-overlay > * {
+    transform: translateY(10vh);
+    transition: tranfrom 0.25s;
 }
 
-.div-info{
-    z-index: 10;
+.image-overlay:hover {
+    opacity: 1;
 }
+
+.image-overlay:hover > * {
+    transform: translateY(0);
+}
+
+.image-name {
+    font-size: 2em;
+    font-weight: bold;
+}
+
+
 
 .pool {
     background: rgb(45,44,47);
