--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,14 +2,17 @@
     background-color:rgba(54, 52, 52, 0.6);
     color: white;
     max-width: 100%;
+    
 }
 
 .card-info {
     width: 100%;
+    max-height: 50%;
 }
 
 .card-photo {
-    width: 60%;
+    max-width: 60%;
+    max-height: 70vh;
 }
 
 .card-body {
