--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,11 @@
-body{
-    background-color: black;
+.msg-alert {
+    background: rgb(45,44,47);
+    width: 100%;
+}
+
+.msg {
+    font-size: 2vw;
+    background: rgb(45,44,47);
 }
 
 .pool {
@@ -54,8 +60,6 @@ body{
 
 
 
-.pool {
-    background: rgb(45,44,47);
-}
+
 
 
