--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,8 @@
 .msg-alert {
     background: rgb(45,44,47);
     width: 100%;
+    border: 2px solid #D3CDCD;
+    border-radius: 2px;
 }
 
 .msg {
@@ -10,6 +12,8 @@
 
 .pool {
     background: rgb(45,44,47);
+    border: 2px solid #D3CDCD;
+    border-radius: 2px;
 }
 
 .div{
@@ -20,6 +24,8 @@
     position: relative;
     width: 20vw;
     height: 50vh;
+    border: 2px solid #D3CDCD;
+    border-radius: 2px;
 }
 
 .image-body {
@@ -30,10 +36,10 @@
 
 .image-overlay {
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 50%;
     background-color:rgba(0,0,0,0.6);
     color: white;
     opacity: 0;
