Cleaned the code and refined

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,21 +1,23 @@
-body{
+body {
     background-color: black;
 }
 
-.navbar-class{
-    background: rgb(45,44,47);
+.navbar-class {
     width: 100%;
     border-bottom: 2px solid #D3CDCD;
     border-radius: 2px;
 }
 
-.logo{
+.logo {
     max-width: 150px;
 }
 
-.logout{
-    background: rgb(45,44,47);
+.logout {
     border: 2px solid #D3CDCD;
     border-radius: 10px;
+}
+
+.navbar-class, .logout {
+    background: rgb(45,44,47);
 }
 
