--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,4 @@
 .msg-alert {
-    background: rgb(45,44,47);
     width: 100%;
     border: 2px solid #D3CDCD;
     border-radius: 2px;
@@ -7,20 +6,22 @@
 
 .msg {
     font-size: 2vw;
-    background: rgb(45,44,47);
 }
 
-.pool {
-    background: rgb(45,44,47);
+.images-container {
     border: 2px solid #D3CDCD;
     border-radius: 2px;
 }
 
-.div{
+.msg-alert, .msg, .images-container {
+    background: rgb(45,44,47);
+}
+
+.images-div {
     width: 100%;
 }
 
-.image{
+.image {
     position: relative;
     width: 20vw;
     height: 50vh;
